--- a/src/js/scenes/home-page/HomePage.scss
+++ b/src/js/scenes/home-page/HomePage.scss
@@ -1,4 +1,4 @@
 .homepage-app-content {
-  overflow-y: auto;
-  height: calc(100vh - 107px);
+  // overflow-y: auto;
+  // height: calc(100vh - 107px);
 }
